# core

./: CMakeLists.txt  compile.sh
include/: ccore.h
src/: util.cpp
